--- a/03_Design_Library/01_Observational_Descriptive/00_Chapter_Observational_Descriptive.Rmd
+++ b/03_Design_Library/01_Observational_Descriptive/00_Chapter_Observational_Descriptive.Rmd
@@ -1,4 +1,3 @@
-# Observational Designs for Descriptive Inference
+# Observational designs for descriptive inference
 
-
-blah blah about this section of designs
+section introduction
